# opencl-fdtd-solver

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
benchmarks/: benchmark.py  benchmark_vs_meep.py
docs/: API.md  PHYSICS.md
gprMax/: gprMax.py
opencl_fdtd_solver/: __init__.py  constants.py  cpml.py  cuda_engine.py  cuda_monitors.py  engine.py  materials.py  monitors.py  numpy_engine.py  numpy_face_cpml.py  plugin.py
opencl_fdtd_solver/kernels/: __init__.py  dft_farfield.cl  dft_farfield.cu  precision.cl  sources.cl  sources.cu  yee_update.cl  yee_update.cu
tests/: analytic_mie.py  compare_with_meep.py  run_coverage.py  test_analytic_validation.py  test_api_docs.py  test_cuda_solver.py  test_meep_farfield_baselines.py  test_meep_plane_baselines.py  test_meep_validation.py  test_solver.py  test_unit_cpml.py  test_unit_engine.py  test_unit_farfield_baselines.py  test_unit_harness.py  test_unit_monitors.py  test_unit_plane_metrics.py  test_unit_plane_render.py
tests/meep_validation/: __init__.py  cases.py  farfield_cases.py  farfield_metrics.py  farfield_render.py  harness.py  plane_cases.py  plane_metrics.py  plane_render.py  update_farfield_baselines.py  update_plane_baselines.py
tests/meep_validation/baselines/: DISCREPANCY_REPORT.md  DISCREPANCY_REPORT_FARFIELD.md  README.md  discrepancy_report.json  discrepancy_report_farfield.json
tests/meep_validation/baselines/dielectric_block/: meep_ex_step0020.npy  meep_ex_step0040.npy  meep_ex_step0060.npy  meep_ex_step0080.npy  meta.json  ocl_ex_step0020.npy  ocl_ex_step0040.npy  ocl_ex_step0060.npy  ocl_ex_step0080.npy
tests/meep_validation/baselines/dielectric_sphere_farfield/: meep_S_db.npy  meep_eh_plus_x.npy  meep_eh_plus_z.npy  meta.json  ocl_S_db.npy  ocl_eh_plus_x.npy  ocl_eh_plus_z.npy
tests/meep_validation/baselines/vacuum_farfield/: angles_deg.npy  meep_S_db.npy  meep_eh_plus_x.npy  meep_eh_plus_z.npy  meta.json  ocl_S_db.npy  ocl_eh_plus_x.npy  ocl_eh_plus_z.npy
tests/meep_validation/baselines/vacuum_sheet/: meep_ex_step0020.npy  meep_ex_step0040.npy  meep_ex_step0060.npy  meep_ex_step0080.npy  meta.json  ocl_ex_step0020.npy  ocl_ex_step0040.npy  ocl_ex_step0060.npy  ocl_ex_step0080.npy
